--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,7 @@ enable_language(C CXX)
 
 add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-std=c++11>)
 
-if (NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-message(FATAL_ERROR "This CMakeLists.txt file expects cmake to be called with a CMake toolchain file:
-cmake ... -DCMAKE_TOOLCHAIN_FILE=path_to_your_toolchain_file.
-See example: Mull.toolchain.OSX.cmake")
-endif()
-
-if (NOT DEFINED LLVM_ROOT)
-  message(FATAL "This CMakeLists.txt file expects cmake to be called with a
-    CMake toolchain file which provides LLVM_ROOT:\n \
-    -DCMAKE_TOOLCHAIN_FILE=path_to_your_toolchain")
-endif()
+set(LLVM_ROOT "/usr/lib/llvm-3.9/")
 
 set(LLVM_LIB_PATH "${LLVM_ROOT}/lib")
 
@@ -47,17 +37,11 @@ find_library(MULL_DEPENDENCY_LLVMSupport LLVMSupport HINTS "${LLVM_LIB_PATH}")
 find_library(MULL_DEPENDENCY_LLVMTarget LLVMTarget HINTS "${LLVM_LIB_PATH}")
 find_library(MULL_DEPENDENCY_LLVMTransformUtils LLVMTransformUtils HINTS "${LLVM_LIB_PATH}")
 
-if (NOT DEFINED MULL_TOOLCHAIN_ZLIB_PATH)
-message(SEND_ERROR "MULL_TOOLCHAIN_ZLIB_PATH variable must be provided in a toolchain file.
-Example: set(MULL_TOOLCHAIN_ZLIB_PATH \"/usr/local/opt/zlib/lib\")")
-endif()
-find_library(MULL_DEPENDENCY_LIBZ z HINTS ${MULL_TOOLCHAIN_LIBZ_PATH})
+find_library(MULL_DEPENDENCY_LIBZ zlib)
 find_library(MULL_DEPENDENCY_NCURSES ncurses)
-
 find_library(MULL_DEPENDENCY_SQLITE sqlite3 HINTS "/usr/local/opt/sqlite")
-
-find_library(MULL_DEPENDENCY_GOOGLETEST gtest HINTS "${MULL_SOURCE_DIR}/googletest")
-find_library(MULL_DEPENDENCY_GOOGLETESTMAIN gtest_main HINTS "${MULL_SOURCE_DIR}/googletest")
+#find_library(MULL_DEPENDENCY_GOOGLETEST gtest HINTS "${MULL_SOURCE_DIR}/googletest")
+#find_library(MULL_DEPENDENCY_GOOGLETESTMAIN gtest_main HINTS "${MULL_SOURCE_DIR}/googletest")
 
 # Architecture-specific files.
 find_library(MULL_DEPENDENCY_LLVMX86AsmParser LLVMX86AsmParser HINTS "${LLVM_LIB_PATH}")
@@ -67,12 +51,7 @@ find_library(MULL_DEPENDENCY_LLVMX86Desc LLVMX86Desc HINTS "${LLVM_LIB_PATH}")
 find_library(MULL_DEPENDENCY_LLVMX86Info LLVMX86Info HINTS "${LLVM_LIB_PATH}")
 find_library(MULL_DEPENDENCY_LLVMX86Utils LLVMX86Utils HINTS "${LLVM_LIB_PATH}")
 
-## Mull's own dependencies:
-if (NOT DEFINED MULL_TOOLCHAIN_SQLITE_PATH)
-message(SEND_ERROR "MULL_TOOLCHAIN_SQLITE_PATH variable must be provided in a toolchain file.
-Example: set(MULL_TOOLCHAIN_SQLITE_PATH \"/usr/local/opt/sqlite\"")
-endif()
-find_library(MULL_DEPENDENCY_SQLITE sqlite3 HINTS ${MULL_TOOLCHAIN_SQLITE_PATH})
+#find_library(MULL_DEPENDENCY_SQLITE sqlite3 HINTS ${MULL_TOOLCHAIN_SQLITE_PATH})
 
 include_directories(${MULL_INCLUDE_DIR})
 
@@ -90,6 +69,7 @@ if(MULL_SUPPORT_RUST)
   message(STATUS "Mull.Rust> Rust lib path: ${mull_rust_libpath}")
   add_definitions(-DMULL_SUPPORT_RUST=1)
 endif()
+
 
 add_subdirectory(tools)
 add_subdirectory(lib)
