Initial mull-autotest target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(MULL_SOURCE_DIR   ${CMAKE_CURRENT_SOURCE_DIR})
 set(MULL_INCLUDE_DIR  ${MULL_SOURCE_DIR}/include)
 set(MULL_CC  "${MULL_SOURCE_DIR}/mull-clang")
 set(MULL_CXX "${MULL_SOURCE_DIR}/mull-clang++")
+set(MULL_TMP "${MULL_SOURCE_DIR}/tmp")
 
 include_directories("${LLVM_ROOT}/include")
 include_directories("${MULL_SOURCE_DIR}/googletest")
@@ -93,14 +94,27 @@ if(MULL_SUPPORT_RUST)
   add_definitions(-DMULL_SUPPORT_RUST=1)
 endif()
 
-add_subdirectory(tools)
 add_subdirectory(lib)
+add_subdirectory(tools)
 # add_subdirectory(test)
 add_subdirectory(unittests)
 
 include("Mull.extensions.cmake")
 
 mull_clone_target(mull mull-bitcode)
-
 set_target_properties(mull-bitcode PROPERTIES XCODE_ATTRIBUTE_CC "${MULL_CC}")
 set_target_properties(mull-bitcode PROPERTIES XCODE_ATTRIBUTE_CXX "${MULL_CXX}")
+
+mull_clone_target(MullUnitTests mull-unittests-bitcode)
+set_target_properties(mull-unittests-bitcode PROPERTIES XCODE_ATTRIBUTE_CC "${MULL_CC}")
+set_target_properties(mull-unittests-bitcode PROPERTIES XCODE_ATTRIBUTE_CXX "${MULL_CXX}")
+
+# set(mull_library "$<TARGET_FILE:mull>")
+# set(mull_driver_executable "$<TARGET_FILE:mull-driver>")
+# set(mull_config_yml "${MULL_TMP}/config.yml")
+mull_clone_executable_target(mull-driver mull-autotest-driver)
+
+add_dependencies(mull-autotest-driver
+  mull-bitcode
+  mull-unittests-bitcode
+)
