--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,3 +117,12 @@ add_dependencies(mull-autotest-driver
   mull-unittests-bitcode
   google-test-bitcode
 )
+
+get_target_property(mull_autotest_driver_link_flags mull-autotest-driver LINK_FLAGS)
+if(NOT mull_autotest_driver_link_flags)
+  set(mull_autotest_driver_link_flags "")
+endif()
+set_target_properties(mull-autotest-driver
+  PROPERTIES
+  LINK_FLAGS
+  "${mull_autotest_driver_link_flags} -force_load ${MULL_DEPENDENCY_LLVMAsmParser}")
