--- a/googletest/CMakeLists.txt
+++ b/googletest/CMakeLists.txt
@@ -1,9 +1,12 @@
-include_directories(
+set(google_test_include_dirs
   "${CMAKE_CURRENT_SOURCE_DIR}"
   "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
+include_directories(${google_test_include_dirs})
+
+file(GLOB_RECURSE google_test_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
+
 set(google_test_sources src/gtest-all.cc src/gtest_main.cc)
-set(google_test_headers "")
 
 add_library(google-test
   SHARED ${google_test_sources} ${google_test_headers})
