Config class: introduce bitcodeFileList parameter.

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -5,6 +5,8 @@ set(mull_unittests_sources
   DriverTests.cpp
   ForkProcessSandboxTest.cpp
   MutationPointTests.cpp
+  ModuleLoaderTest.cpp
+
   TestRunnersTests.cpp
   UniqueIdentifierTests.cpp
 
