--- a/googletest/CMakeLists.txt
+++ b/googletest/CMakeLists.txt
@@ -10,4 +10,4 @@ file(GLOB_RECURSE google_test_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 
 set(google_test_sources src/gtest-all.cc src/gtest_main.cc)
 
-add_library(google-test SHARED ${google_test_sources} ${google_test_headers})
+add_library(google-test STATIC ${google_test_sources} ${google_test_headers})
