CMake: add_subdirectory projects/
This projects/ folder will contain:
- mull-auto-test project
- mull and klee tutorial 2
- other small projects that we might use a demo projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,4 +92,6 @@ add_subdirectory(googletest)
 add_subdirectory(tools)
 # add_subdirectory(test)
 add_subdirectory(unittests)
+add_subdirectory(projects)
+
 
