projects/CMakeLists: ignore folders with __

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -5,6 +5,8 @@
 file(GLOB entries *)
 foreach(entry ${entries})
   if(IS_DIRECTORY ${entry} AND EXISTS ${entry}/CMakeLists.txt)
-    add_subdirectory(${entry})
+    if(NOT ${entry} MATCHES "\/__.*$")
+      add_subdirectory(${entry})
+    endif()
   endif()
 endforeach(entry)
