--- a/Makefile.macos
+++ b/Makefile.macos
@@ -7,7 +7,6 @@ MULL_CMAKE_TOOLCHAIN?=$(PWD)/Mull.toolchain.macos.cmake
 
 MULL_UNITTESTS_DIR=$(BUILD_DIR_NINJA)/unittests
 MULL=$(MULL_UNITTESTS_DIR)/MullUnitTests
-LLVM_LIB_PATH=/usr/local/opt/llvm@3.9/lib
 
 # Self-Documented Makefile
 # http://marmelab.com/blog/2016/02/29/auto-documented-makefile.html
@@ -15,14 +14,15 @@ LLVM_LIB_PATH=/usr/local/opt/llvm@3.9/lib
 help: ## Show this help message.
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
+install: build_ninja
+	cd $(BUILD_DIR_NINJA) && ninja install
+
 test: test_unit
 
 test_unit: build_ninja ## Run Unit Tests (Builds Ninja cache first if it does not exist)
 	cd $(BUILD_DIR_NINJA) && ninja MullUnitTests
 
-	# TODO: A common but dirty solution, people should learn about rpath
-	# http://stackoverflow.com/a/12399085/598057
-	cd $(MULL_UNITTESTS_DIR) && LD_LIBRARY_PATH="$(BUILD_DIR_NINJA)/lib:$(LLVM_LIB_PATH)" $(MULL)
+	cd $(MULL_UNITTESTS_DIR) && $(MULL)
 
 CMAKE_COMMAND_LINE_DEBUG_FLAGS=# --trace # --debug-output # --debug-output --trace --trace-expand # --trace # --debug-output #
 
@@ -33,9 +33,9 @@ build_xcode: ## Build Xcode project with CMake.
 
 	rm -rfv $(BUILD_DIR_XCODE)/CMakeCache.txt
 	cd $(BUILD_DIR_XCODE) && cmake ../ -G Xcode \
-	  $(CMAKE_COMMAND_LINE_DEBUG_FLAGS) \
-	  -DCMAKE_TOOLCHAIN_FILE=$(MULL_CMAKE_TOOLCHAIN) \
-	  -DMULL_SUPPORT_RUST=1
+    $(CMAKE_COMMAND_LINE_DEBUG_FLAGS) \
+    -DCMAKE_TOOLCHAIN_FILE=$(MULL_CMAKE_TOOLCHAIN) \
+    -DMULL_SUPPORT_RUST=0
 
 rebuild_xcode: build_xcode reopen ## Build Xcode project with CMake, kill Xcode, reopen the project in Xcode
 
@@ -43,10 +43,12 @@ build_ninja: ## Build Ninja project with CMake.
 	mkdir -p $(BUILD_DIR_NINJA)
 
 	rm -rfv $(BUILD_DIR_NINJA)/CMakeCache.txt
-	cd $(BUILD_DIR_NINJA) && cmake ../ -G Ninja \
-	  $(CMAKE_COMMAND_LINE_DEBUG_FLAGS) \
-	  -DCMAKE_TOOLCHAIN_FILE=$(MULL_CMAKE_TOOLCHAIN) \
-	  -DMULL_SUPPORT_RUST=0
+	cd $(BUILD_DIR_NINJA) && cmake -G Ninja \
+    -DCMAKE_INSTALL_PREFIX=/usr/local/mull/mull-install \
+    $(CMAKE_COMMAND_LINE_DEBUG_FLAGS) \
+    -DCMAKE_TOOLCHAIN_FILE=$(MULL_CMAKE_TOOLCHAIN) \
+    -DMULL_SUPPORT_RUST=0 \
+    ../
 
 ## Xcode-specific tools.
 ## TODO: maybe extract to Makefile.Xcode?
