CMake: teach MullUnitTests to rpath llvm@3.9/lib.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,6 @@ find_package(Threads REQUIRED)
 
 add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-std=c++11>)
 
-# https://cmake.org/Wiki/CMake_RPATH_handling#Always_full_RPATH
-SET(CMAKE_SKIP_BUILD_RPATH FALSE)
-SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
-SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
 if (NOT DEFINED CMAKE_TOOLCHAIN_FILE)
 message(FATAL_ERROR "This CMakeLists.txt file expects cmake to be called with a CMake toolchain file:
 cmake ... -DCMAKE_TOOLCHAIN_FILE=path_to_your_toolchain_file.
@@ -31,6 +25,12 @@ if (NOT DEFINED LLVM_ROOT)
 endif()
 
 set(LLVM_LIB_PATH "${LLVM_ROOT}/lib")
+
+# https://cmake.org/Wiki/CMake_RPATH_handling#Always_full_RPATH
+SET(CMAKE_SKIP_BUILD_RPATH FALSE)
+SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib" "${LLVM_LIB_PATH}")
+SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 set(MULL_SOURCE_DIR   ${CMAKE_CURRENT_SOURCE_DIR})
 set(MULL_INCLUDE_DIR  ${MULL_SOURCE_DIR}/include)
