--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -51,10 +51,31 @@ target_link_libraries(MullUnitTests
 
   google-test
 
-  ${MULL_DEPENDENCY_LLVM}
+  ${MULL_DEPENDENCY_LLVM_LIBRARIES}
 
   ${CMAKE_THREAD_LIBS_INIT}
 )
+
+# compile flags
+get_target_property(default_compile_flags MullUnitTests COMPILE_FLAGS)
+if(NOT default_compile_flags)
+  set(default_compile_flags "")
+endif()
+set(mull_unittests_compileflags ${default_compile_flags} ${LLVM_CXX_FLAGS})
+set_target_properties(MullUnitTests
+  PROPERTIES COMPILE_FLAGS
+  "${mull_unittests_compileflags}"
+)
+
+# Link flags
+get_target_property(default_link_flags MullUnitTests LINK_FLAGS)
+if(NOT ${default_link_flags})
+set(default_link_flags "")
+endif()
+set(mull_unittests_link_flags
+  "${default_link_flags} ${LLVM_LINK_FLAGS}"
+)
+set_target_properties(MullUnitTests PROPERTIES LINK_FLAGS "${mull_unittests_link_flags}")
 
 # @rpath
 get_target_property(default_rpath MullUnitTests INSTALL_RPATH)
@@ -62,20 +83,6 @@ set(mull_unittests_rpath ${default_rpath} ${mull_unittests_rpath})
 set_target_properties(MullUnitTests
   PROPERTIES INSTALL_RPATH
   "${mull_unittests_rpath}"
-)
-
-# This is done so that CMake sets LLVM_LIB_PATH to the MullUnitTests executable
-# because libLLVM cannot find libLTO on Mac OS.
-# This probably is a bug in the LLVM 3.9 bottle.
-get_target_property(mull_unittests_lflags MullUnitTests LINK_FLAGS)
-if (NOT DEFINED ${mull_unittests_lflags})
-  set(mull_unittests_lflags "")
-endif()
-set(mull_unittests_lflags
-  ${mull_unittests_lflags} "-Wl,-rpath ${LLVM_LIB_PATH}")
-set_target_properties(MullUnitTests
-  PROPERTIES LINK_FLAGS
-  "${mull_unittests_lflags}"
 )
 
 # This copies (symlinks) fixtures/*.bc files that used by unit tests.
