--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ os:
 before_install:
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew update; fi
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew upgrade cmake; fi
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install llvm@3.9; fi
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install zlib; fi
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install ncurses; fi
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install sqlite; fi
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then brew install ninja; fi
+- pwd
+- cd /opt && sudo wget http://releases.llvm.org/3.9.0/clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz && sudo tar xvf clang+llvm-3.9.0-x86_64-apple-darwin.tar.xz && sudo mv clang+llvm-3.9.0-x86_64-apple-darwin llvm-3.9
+- cd /Users/travis/build/mull-project/mull
 
 # Uncomment this line when support Rust
 # - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then curl -sf https://static.rust-lang.org/rustup.sh | sudo sh; fi
