Move call tree mapping into .cpp file to avoid double initialization
https://stackoverflow.com/questions/11962918/local-static-variable-is-instantiated-multiple-times-why

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ set(mull_sources
   ForkProcessSandbox.cpp
   Logger.cpp
   ModuleLoader.cpp
+  MullJIT.cpp
 
   MutationOperators/AddMutationOperator.cpp
   MutationOperators/AndOrReplacementMutationOperator.cpp
