ReplaceCallMutationOperator: Int, Double, Float calls.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,6 +14,7 @@ set(mull_sources
   MutationOperators/MutationOperatorsFactory.cpp
   MutationOperators/NegateConditionMutationOperator.cpp
   MutationOperators/RemoveVoidFunctionMutationOperator.cpp
+  MutationOperators/ReplaceCallMutationOperator.cpp
   MutationOperators/MathDivMutationOperator.cpp
   MutationOperators/MathMulMutationOperator.cpp
   MutationOperators/MathSubMutationOperator.cpp
