--- a/Makefile.macos
+++ b/Makefile.macos
@@ -67,6 +67,10 @@ ninja.build: ## Build Ninja project with CMake.
     -DMULL_SUPPORT_RUST=0 \
     ../
 
+ninja.driver: ninja.build ## Build mull-driver
+	cd $(BUILD_DIR_NINJA) && ninja mull-driver
+	@echo "Resulting binary:\n"$(BUILD_DIR_NINJA)/tools/driver/mull-driver
+
 ninja.test: ninja.build ## Run Unit Tests (Builds Ninja cache first if it does not exist)
 	cd $(BUILD_DIR_NINJA) && ninja MullUnitTests
 
