HelloWorld: simplify compile flags, compile on CentOS.

--- a/Examples/HelloWorld/Makefile
+++ b/Examples/HelloWorld/Makefile
@@ -17,21 +17,13 @@ BUILD_DIR=$(PWD)/build
 
 GTEST_DIR=$(PWD)/../../googletest
 
-HEADER_SEARCH_FLAGS=-I$(GTEST_DIR) -I$(GTEST_DIR)/include
-MACRO_DEFINITONS=-DGTEST_NO_LLVM_RAW_OSTREAM=1
-STD_VERSION=-std=c++11
+GTEST_HEADER_SEARCH_FLAGS=-I$(GTEST_DIR) -I$(GTEST_DIR)/include
 
-# This also depends on min mac version of google test.
-MACOSX_VERSION=-mmacosx-version-min=10.12
-SYSROOT=-isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk
-
-NO_CXA=
-#NO_CXA=-fno-use-cxa-atexit
-
-CXXFLAGS:=$(shell /opt/llvm-3.9/bin/llvm-config --cxxflags) -g
-CXXFLAGS:=$(subst -O3,-O0,$(CXXFLAGS))
-
-CC_FLAGS=$(CXXFLAGS) $(STD_VERSION) $(HEADER_SEARCH_FLAGS) $(MACRO_DEFINITONS) $(MACOSX_VERSION) $(SYSROOT) $(NO_CXA)
+PTHREADS:=""
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),Linux)
+    PTHREADS += -pthread
+endif
 
 OBJECTS=$(BUILD_DIR)/HelloWorld.o
 LLVM_IR=$(BUILD_DIR)/HelloWorld.ll
@@ -64,24 +56,25 @@ $(BUILD_DIR):
 ## Bitcode
 
 $(BUILD_DIR)/%.bc:
-	$(MULL_CC) -emit-llvm -c $(CC_FLAGS) $(PWD)/$*.cpp -o $@
+	$(MULL_CC) -emit-llvm -c $(GTEST_HEADER_SEARCH_FLAGS) $(PWD)/$*.cpp -o $@
 
 ## LLVM IR
 
 $(BUILD_DIR)/%.ll:
-	$(MULL_CC) -S -emit-llvm -c $(CC_FLAGS) $(PWD)/$*.cpp -o $@
+	$(MULL_CC) -S -emit-llvm -c $(GTEST_HEADER_SEARCH_FLAGS) $(PWD)/$*.cpp -o $@
 
 ## Mach-o
 
 $(BUILD_DIR)/%.o:
-	$(MULL_CC) -c $(CC_FLAGS) ./$*.cpp -o $@
+	$(MULL_CC) -c $(GTEST_HEADER_SEARCH_FLAGS) ./$*.cpp -o $@
 
 # -stdlib=libc++ comes from https://stackoverflow.com/a/16353112/598057
 $(BUILD_DIR)/tests: $(OBJECTS) $(BUILD_DIR)/libgtest.a
-	$(MULL_CC)++ -L$(BUILD_DIR) -lgtest $(OBJECTS) -o $@
+	$(MULL_CC)++ -L$(BUILD_DIR) -lgtest $(OBJECTS) $(PTHREADS) -o $@
 
 clean:
-	rm -rf $(BUILD_DIR)
+	rm -rfv $(BUILD_DIR)
+	rm -rfv *.sqlite
 
 # Google Test
 
@@ -89,10 +82,10 @@ $(BUILD_DIR)/libgtest.a: $(BUILD_DIR)/gtest.o $(BUILD_DIR)/gtest_main.o
 	ar -rv $(BUILD_DIR)/libgtest.a $(BUILD_DIR)/gtest.o $(BUILD_DIR)/gtest_main.o
 
 $(BUILD_DIR)/gtest.o:
-	$(MULL_CC) -c $(CC_FLAGS) $(GTEST_DIR)/src/gtest-all.cc -o $@
+	$(MULL_CC) -c $(GTEST_HEADER_SEARCH_FLAGS) $(GTEST_DIR)/src/gtest-all.cc -o $@
 
 $(BUILD_DIR)/gtest.bc:
-	$(MULL_CC) -c -emit-llvm $(CC_FLAGS) $(GTEST_DIR)/src/gtest-all.cc -o $@
+	$(MULL_CC) -c -emit-llvm $(GTEST_HEADER_SEARCH_FLAGS) $(GTEST_DIR)/src/gtest-all.cc -o $@
 
 $(BUILD_DIR)/gtest_main.o:
-	$(MULL_CC) -c $(CC_FLAGS) $(GTEST_DIR)/src/gtest_main.cc -o $@
+	$(MULL_CC) -c $(GTEST_HEADER_SEARCH_FLAGS) $(GTEST_DIR)/src/gtest_main.cc -o $@
