--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -22,6 +22,7 @@ set(mull_unittests_sources
   GoogleTest/GoogleTestFinderTest.cpp
 
   CustomTestFramework/CustomTestRunnerTests.cpp
+  CustomTestFramework/CustomTestFinderTests.cpp
 
   SQLiteReporterTest.cpp
 
