--- a/Makefile.macos
+++ b/Makefile.macos
@@ -21,6 +21,10 @@ test: ninja.test ## Run unit tests (runs tests using Ninja)
 
 clean: ninja.clean xcode.clean ## Delete CMake build caches: Xcode and Ninja.
 
+example: ninja.driver
+	cd Examples/HelloWorld && \
+        make example MULL=$(BUILD_DIR_NINJA)/tools/driver/mull-driver MULL_CC=/opt/llvm-3.9/bin/clang
+
 CMAKE_COMMAND_LINE_DEBUG_FLAGS=# --trace # --debug-output # --debug-output --trace --trace-expand # --trace # --debug-output #
 
 # Xcode
@@ -75,10 +79,6 @@ ninja.test: ninja.build ## Run Unit Tests (Builds Ninja cache first if it does n
 	cd $(BUILD_DIR_NINJA) && ninja MullUnitTests
 
 	cd $(MULL_UNITTESTS_DIR) && $(MULL)
-
-ninja.example: ninja.driver
-	cd Examples/HelloWorld && \
-        make example MULL=$(BUILD_DIR_NINJA)/tools/driver/mull-driver MULL_CC=/opt/llvm-3.9/bin/clang
 
 ninja.clean: ## Delete Ninja CMake build cache.
 	rm -rfv $(BUILD_DIR_NINJA)
