--- a/Makefile.macos
+++ b/Makefile.macos
@@ -25,6 +25,10 @@ example: ninja.driver
 	cd Examples/HelloWorld && \
         make example MULL=$(BUILD_DIR_NINJA)/tools/driver/mull-driver MULL_CC=/opt/llvm-3.9/bin/clang
 
+example.run: ninja.driver
+	cd Examples/HelloWorld && \
+        make run MULL=$(BUILD_DIR_NINJA)/tools/driver/mull-driver MULL_CC=/opt/llvm-3.9/bin/clang
+
 travis: ninja.test example
 
 CMAKE_COMMAND_LINE_DEBUG_FLAGS=# --trace # --debug-output # --debug-output --trace --trace-expand # --trace # --debug-output #
