Use bitcode for Custom Test fixtures

--- a/lab/custom_test/Makefile
+++ b/lab/custom_test/Makefile
@@ -29,8 +29,9 @@ $(BUILD_DIR):
 $(FIXTURES_DIR):
 	mkdir -p $(FIXTURES_DIR)
 
-synchronize_fixtures: llvm_ir $(FIXTURES_DIR)
+synchronize_fixtures: llvm_ir bitcode $(FIXTURES_DIR)
 	cp $(BUILD_DIR)/*.ll $(FIXTURES_DIR)
+	cp $(BUILD_DIR)/*.bc $(FIXTURES_DIR)
 
 clean:
 	rm -rf build
