--- a/unittests/fixtures/.gitignore
+++ b/unittests/fixtures/.gitignore
@@ -4,3 +4,4 @@ custom_test/distance/test.bc
 simple_test/mutation_operators/and_or_replacement/test_and_or_operators.bc
 simple_test/mutation_operators/and_or_replacement_cpp/test_and_or_operators.bc
 simple_test/mutation_operators/math_div/math_div.bc
+simple_test/mutation_operators/math_mul/math_mul.bc
