--- a/unittests/fixtures/.gitignore
+++ b/unittests/fixtures/.gitignore
@@ -5,3 +5,4 @@ simple_test/mutation_operators/and_or_replacement/test_and_or_operators.bc
 simple_test/mutation_operators/and_or_replacement_cpp/test_and_or_operators.bc
 simple_test/mutation_operators/math_div/math_div.bc
 simple_test/mutation_operators/math_mul/math_mul.bc
+simple_test/mutation_operators/math_sub/math_sub.bc
