--- a/lab/simple_test/mutation_operators/remove_void_function/Makefile
+++ b/lab/simple_test/mutation_operators/remove_void_function/Makefile
@@ -1,17 +1,29 @@
+CC ~= /opt/llvm-3.9/bin/clang
+LEVEL=../../../..
+FIXTURES_DIR=$(LEVEL)/unittests/fixtures/simple_test/mutation_operators/remove_void_function/
 
 default: main
 	./main
 
 %.o: %.c
-	clang -S -emit-llvm $*.c
-	clang -c $*.c
+	$(CC) -S -emit-llvm $*.c
+	$(CC) -c -emit-llvm $*.c
+	$(CC) -c $*.c
 
 main: testee.o tester.o
-	clang -Wall -o main testee.o tester.o main.c
+	$(CC) -Wall -o main testee.o tester.o main.c
+
+bitcode: testee.o tester.o
+
+synchronize_fixtures: bitcode $(FIXTURES_DIR)
+	cp ./*.bc $(FIXTURES_DIR)
+
+$(FIXTURES_DIR):
+	mkdir -p $(FIXTURES_DIR)
 
 clean:
 	rm -rf main
 	rm -rf *.o
 	rm -rf *.bc
-
+	rm -rf *.ll
 
