--- a/unittests/fixtures/.gitignore
+++ b/unittests/fixtures/.gitignore
@@ -8,3 +8,5 @@ simple_test/mutation_operators/math_mul/math_mul.bc
 simple_test/mutation_operators/math_sub/math_sub.bc
 simple_test/mutation_operators/negate_condition/testee.bc
 simple_test/mutation_operators/negate_condition/tester.bc
+simple_test/mutation_operators/remove_void_function/testee.bc
+simple_test/mutation_operators/remove_void_function/tester.bc
