Use bitcode for ReplaceCall fixtures

--- a/lab/simple_test/mutation_operators/replace_call/Makefile
+++ b/lab/simple_test/mutation_operators/replace_call/Makefile
@@ -1,19 +1,29 @@
-
 CC ~= /opt/llvm-3.9/bin/clang
-
-OBJS=replace_call.o
+LEVEL=../../../..
+FIXTURES_DIR=$(LEVEL)/unittests/fixtures/simple_test/mutation_operators/replace_call/
 
 default: main
 	./main
 
-main: $(OBJS)
-	clang -Wall -o main $(OBJS) main.c
+main: replace_call.o
+	$(CC) -Wall -o main replace_call.o main.c
 
 %.o: %.c
-	clang -S -emit-llvm $*.c
-	clang -c $*.c
+	$(CC) -S -emit-llvm $*.c
+	$(CC) -c -emit-llvm $*.c
+	$(CC) -c $*.c
+
+bitcode: replace_call.o
+
+synchronize_fixtures: bitcode $(FIXTURES_DIR)
+	cp ./*.bc $(FIXTURES_DIR)
+
+$(FIXTURES_DIR):
+	mkdir -p $(FIXTURES_DIR)
 
 clean:
 	rm -rf main
 	rm -rf *.o
 	rm -rf *.bc
+	rm -rf *.ll
+
