--- a/unittests/fixtures/.gitignore
+++ b/unittests/fixtures/.gitignore
@@ -12,3 +12,5 @@ simple_test/mutation_operators/remove_void_function/testee.bc
 simple_test/mutation_operators/remove_void_function/tester.bc
 simple_test/mutation_operators/replace_call/replace_call.bc
 simple_test/mutation_operators/scalar_value/scalar_value.bc
+google_test/google_test/Test.bc
+google_test/google_test/Testee.bc
